--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,12 +6,13 @@
         <div class = 'row'>
             <div class = 'col-md-2'>Filter By: </div>
             <div class = 'col-md-4'>
-                <input type = 'text' />
+                <input type = 'text'
+                [(ngModel)] = 'listFilter' />
             </div>
         </div>
         <div class="row">
             <div class = 'col-md-6'>
-                <h4>Filtered By: </h4>
+                <h4>Filtered By: {{listFilter}} </h4>
             </div>
         </div>
     <div class="table-responsive">
@@ -20,8 +21,9 @@
             <thead>
                 <tr>
                     <th>
-                        <button class = 'btn btn-primary'>
-                            Show Image
+                        <button class = 'btn btn-primary'
+                        (click) = 'toggelImage()'>
+                        {{showImage ? 'Hide': 'Show'}} Image
                         </button>
                     </th>
                     <th>
@@ -36,7 +38,14 @@
             <tbody>
                 <tr *ngFor = 'let product of products'>
                     
-                    <td></td>
+                    <td >
+                        <img *ngIf='showImage'
+                         [src] = 'product.imageUrl'
+                        [title]='product.productName'
+                        [style.width.px]='imageWidth'
+                        [style.margin.px] = 'imageMargin'
+                        [style.padding.px]='imgPadding'>
+                    </td>
 
                     <td>{{product.productName}}</td>
 
