--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -41,7 +41,7 @@
                     <td >
                         <img *ngIf='showImage'
                          [src] = 'product.imageUrl'
-                        [title]='product.productName'
+                        [title]='product.productName |uppercase'
                         [style.width.px]='imageWidth'
                         [style.margin.px] = 'imageMargin'
                         [style.padding.px]='imgPadding'>
@@ -50,11 +50,11 @@
                     <td>{{product.productName}}</td>
 
 
-                    <td>{{product.productCode}}</td>
+                    <td>{{product.productCode | lowercase}}</td>
 
                     <td>{{product.releaseDate}}</td>
 
-                    <td>{{product.price}}</td>
+                    <td>{{product.price| currency:"INR":'symbol':'1.2-2' | lowercase}}</td>
                    
                     <td>{{product.starRating}}</td>
 
