--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -50,7 +50,7 @@
                     <td>{{product.productName}}</td>
 
 
-                    <td>{{product.productCode | lowercase}}</td>
+                    <td>{{product.productCode | lowercase | convertToSpaces: '-' }}</td>
 
                     <td>{{product.releaseDate}}</td>
 
