--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -56,7 +56,9 @@
 
                     <td>{{product.price| currency:"INR":'symbol':'1.2-2' | lowercase}}</td>
                    
-                    <td>{{product.starRating}}</td>
+                    <td><pm-star [rating] = 'product.starRating'
+                        (notify) = 'onNotify($event)' ></pm-star>
+                    </td>
 
                 </tr>
             </tbody>
