--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -47,7 +47,12 @@
                         [style.padding.px]='imgPadding'>
                     </td>
 
-                    <td>{{product.productName}}</td>
+                    <td>
+                        <a [routerLink]="['/products',product.productId]">
+                                {{product.productName}}
+                        </a>
+                        
+                    </td>
 
 
                     <td>{{product.productCode | lowercase | convertToSpaces: '-' }}</td>
